....I..... [ZBX-8658] made various changes to ODBC related m4 scripts to improve readability and library function availability (Juris)

--------------------------------------------------------------------------------
Changes for 2.4.3rc1

New features:
.......PS. [ZBX-4054] added support for SNMP values of type OID (asaveljevs)

Bug fixes:
.......PS. [ZBX-8328] fixed UTF-8 string truncation for IBM DB2 databases to fit the column width (wiper)
..F....... [ZBX-8850] fixed fatal error in graph generation when there is no data and ZBX_UNITS_ROUNDOFF_LOWER_LIMIT is set to "2" (Krists)
..F....... [ZBX-8874] fixed possible wrong submit button activation when multiple submit buttons are present and "Enter" key is used to submit (Krists)
.......PS. [ZBX-8476] fixed queue being calculated incorrectly when there is even a slight time difference between server and proxy (asaveljevs)
A......... [ZBX-8832] fixed template application inheritance when linking template other templates (Krists)
A.F....... [ZBX-8979] fixed undefined indexes in the profiler on early version of PHP 5.3 (Pavels)
..F....... [ZBX-8983] fixed "schema" option description in frontend configuration file (Oleg)

--------------------------------------------------------------------------------
Changes for 2.4.2

New features:
A.F....... [ZBX-1357] updated Brazilian Portuguese, Polish and Russian translations; thanks to Zabbix translators (Richlv)

--------------------------------------------------------------------------------
Changes for 2.4.2rc1

New features:
A.F....... [ZBX-1357] updated Brazilian Portuguese, Greek, Italian, Japanese, Polish, Slovak and Spanish translations; thanks to Zabbix translators (Richlv)
...G...... [ZBX-8503] increased limitation of command length for remote commands with agent (Sasha)

Bug fixes:
........S. [ZBX-8978] fixed propagation of the SNMP bulk flag into discovered hosts (Sasha)